--- a/MainWindow.xaml
+++ b/MainWindow.xaml
@@ -7,6 +7,13 @@
         mc:Ignorable="d"
         Title="MainWindow" Height="450" Width="800">
     <Grid>
-
+        <Grid>
+            <Grid.ColumnDefinitions>
+                <ColumnDefinition/>
+                <ColumnDefinition/>
+            </Grid.ColumnDefinitions>
+            <Canvas x:Name="Canvas1" Grid.Column="1"/>
+            <TextBox x:Name="TextBox1" HorizontalAlignment="Left" Margin="71,65,0,0" Text="TextBox" TextWrapping="Wrap" VerticalAlignment="Top" Width="232" Height="114"/>
+        </Grid>
     </Grid>
 </Window>
