--- a/Pizzaria/MainWindow.xaml
+++ b/Pizzaria/MainWindow.xaml
@@ -7,7 +7,7 @@
         mc:Ignorable="d"
         Title="MainWindow" Height="450" Width="800">
     <Window.Resources>
-        <DataTemplate DataType="{x:Type local:PizzaTypes}">
+        <DataTemplate DataType="{x:Type local:Pizza}">
             <Grid>
                 <Grid.ColumnDefinitions>
                     <ColumnDefinition Width="1*"/>
@@ -19,10 +19,10 @@
                     <RowDefinition Height="50"/>
                 </Grid.RowDefinitions>
 
-                <TextBlock Grid.Column="0" Text="{Binding Price}"/>
-                <TextBlock Grid.Column="1" Text="{Binding Name}"/>
-                <TextBlock Grid.Column="2" Text="{Binding Indredients}"/>
-                <Button>Buy</Button>
+                <TextBlock Grid.Column="0" Text="{Binding PizzaPrice}"/>
+                <TextBlock Grid.Column="1" Text="{Binding PizzaName}"/>
+                <TextBlock Grid.Column="2" Text="{Binding Ingredients}"/>
+                <Button Grid.Column="3">Buy</Button>
             </Grid>
         </DataTemplate>
     </Window.Resources>
