--- a/Pizzaria/MainWindow.xaml
+++ b/Pizzaria/MainWindow.xaml
@@ -21,7 +21,7 @@
 
                 <TextBlock Grid.Column="0" Text="{Binding PizzaPrice}"/>
                 <TextBlock Grid.Column="1" Text="{Binding PizzaName}"/>
-                <TextBlock Grid.Column="2" Text="{Binding PizzaIngredients}"/>
+                <TextBlock Grid.Column="2" TextWrapping="Wrap" Text="{Binding PizzaIngredients}"/>
                 <Button Grid.Column="3">Buy</Button>
             </Grid>
         </DataTemplate>
