--- a/Pizzaria/MainWindow.xaml
+++ b/Pizzaria/MainWindow.xaml
@@ -8,21 +8,21 @@
         Title="MainWindow" Height="450" Width="800">
     <Window.Resources>
         <DataTemplate DataType="{x:Type local:Pizza}">
-            <Grid>
+            <Grid ShowGridLines="True">
                 <Grid.ColumnDefinitions>
                     <ColumnDefinition Width="1*"/>
-                    <ColumnDefinition Width="1*"/>
-                    <ColumnDefinition Width="1*"/>
+                    <ColumnDefinition Width="2*"/>
+                    <ColumnDefinition Width="2*"/>
                     <ColumnDefinition Width="1*"/>
                 </Grid.ColumnDefinitions>
                 <Grid.RowDefinitions>
                     <RowDefinition Height="50"/>
                 </Grid.RowDefinitions>
 
-                <TextBlock Grid.Column="0" Text="{Binding PizzaPrice}"/>
-                <TextBlock Grid.Column="1" Text="{Binding PizzaName}"/>
-                <TextBlock Grid.Column="2" TextWrapping="Wrap" Text="{Binding PizzaIngredients}"/>
-                <Button Grid.Column="3">Buy</Button>
+                <TextBlock Margin="5" Grid.Column="0" Text="{Binding PizzaPrice}"/>
+                <TextBlock Margin="5" Grid.Column="1" Text="{Binding PizzaName}"/>
+                <TextBlock Margin="5" Grid.Column="2" TextWrapping="Wrap" Text="{Binding PizzaIngredients}"/>
+                <Button Margin="5" Grid.Column="3">Buy</Button>
             </Grid>
         </DataTemplate>
     </Window.Resources>
