--- a/Pizzaria/MainWindow.xaml
+++ b/Pizzaria/MainWindow.xaml
@@ -7,30 +7,78 @@
         mc:Ignorable="d"
         Title="MainWindow" Height="450" Width="800">
     <Window.Resources>
-        <DataTemplate DataType="{x:Type local:Pizza}">
-            <Grid ShowGridLines="True">
-                <Grid.ColumnDefinitions>
-                    <ColumnDefinition Width="1*"/>
-                    <ColumnDefinition Width="2*"/>
-                    <ColumnDefinition Width="2*"/>
-                    <ColumnDefinition Width="1*"/>
-                </Grid.ColumnDefinitions>
-                <Grid.RowDefinitions>
-                    <RowDefinition Height="50"/>
-                </Grid.RowDefinitions>
 
-                <TextBlock Margin="5" Grid.Column="0" Text="{Binding PizzaPrice}"/>
-                <TextBlock Margin="5" Grid.Column="1" Text="{Binding PizzaName}"/>
-                <TextBlock Margin="5" Grid.Column="2" TextWrapping="Wrap" Text="{Binding PizzaIngredients}"/>
-                <Button Click="SelectPizza_Click" Margin="5" Grid.Column="3">Select</Button>
-            </Grid>
-        </DataTemplate>
     </Window.Resources>
-    <Grid>
-        <ScrollViewer>
-            <StackPanel>
-                <ItemsControl Name="lvDataBinding"/>
-            </StackPanel>
-        </ScrollViewer>
-    </Grid>
+
+
+
+    <StackPanel Margin="10">
+        <ComboBox Name="cmbColors">
+            <ComboBox.ItemTemplate>
+                <DataTemplate DataType="{x:Type local:Pizza}">
+                    <Grid ShowGridLines="True">
+                        <Grid.ColumnDefinitions>
+                            <ColumnDefinition Width="1*"/>
+                            <ColumnDefinition Width="2*"/>
+                            <ColumnDefinition Width="2*"/>
+                            <ColumnDefinition Width="1*"/>
+                        </Grid.ColumnDefinitions>
+                        <Grid.RowDefinitions>
+                            <RowDefinition Height="50"/>
+                        </Grid.RowDefinitions>
+
+                        <TextBlock Margin="5" Grid.Column="0" Text="{Binding PizzaPrice}"/>
+                        <TextBlock Margin="5" Grid.Column="1" Text="{Binding PizzaName}"/>
+                        <TextBlock Margin="5" Grid.Column="2" TextWrapping="Wrap" Text="{Binding PizzaIngredients}"/>
+                        <Button Click="SelectPizza_Click" Margin="5" Grid.Column="3">Select</Button>
+                    </Grid>
+                </DataTemplate>
+            </ComboBox.ItemTemplate>
+        </ComboBox>
+        <ComboBox Name="doughs">
+            <ComboBox.ItemTemplate>
+                <DataTemplate DataType="{x:Type local:Ingredient}">
+                    <Button Click="SelectDoughs_Click" Margin="5" Grid.Column="3">
+                        <TextBlock Text="{Binding IngredientName}"/>
+                    </Button>
+                </DataTemplate>
+            </ComboBox.ItemTemplate>
+        </ComboBox>
+        <ComboBox Name="sauces">
+            <ComboBox.ItemTemplate>
+                <DataTemplate DataType="{x:Type local:Ingredient}">
+                    <Button Click="SelectSauces_Click" Margin="5" Grid.Column="3">
+                        <TextBlock Text="{Binding IngredientName}"/>
+                    </Button>
+                </DataTemplate>
+            </ComboBox.ItemTemplate>
+        </ComboBox>
+        <ComboBox Name="cheeses">
+            <ComboBox.ItemTemplate>
+                <DataTemplate DataType="{x:Type local:Ingredient}">
+                    <Button Click="SelectCheeses_Click" Margin="5" Grid.Column="3">
+                        <TextBlock Text="{Binding IngredientName}"/>
+                    </Button>
+                </DataTemplate>
+            </ComboBox.ItemTemplate>
+        </ComboBox>
+        <ComboBox Name="toppings">
+            <ComboBox.ItemTemplate>
+                <DataTemplate DataType="{x:Type local:Ingredient}">
+                    <Button Click="SelectToppings_Click" Margin="5" Grid.Column="3">
+                        <TextBlock Text="{Binding IngredientName}"/>
+                    </Button>
+                </DataTemplate>
+            </ComboBox.ItemTemplate>
+        </ComboBox>
+        <ComboBox Name="spices">
+            <ComboBox.ItemTemplate>
+                <DataTemplate DataType="{x:Type local:Ingredient}">
+                    <Button Click="SelectSpices_Click" Margin="5" Grid.Column="3">
+                        <TextBlock Text="{Binding IngredientName}"/>
+                    </Button>
+                </DataTemplate>
+            </ComboBox.ItemTemplate>
+        </ComboBox>
+    </StackPanel>
 </Window>
