--- a/Pizzaria/MainWindow.xaml
+++ b/Pizzaria/MainWindow.xaml
@@ -35,52 +35,96 @@
                 </DataTemplate>
             </ComboBox.ItemTemplate>
         </ComboBox>
-        <WrapPanel>
-            <ItemsControl Name="doughs">
-                <ItemsControl.ItemTemplate>
-                    <DataTemplate DataType="{x:Type local:Ingredient}">
-                        <Button Click="SelectDoughs_Click" Margin="5" Grid.Column="3">
-                            <TextBlock Text="{Binding IngredientName}"/>
-                        </Button>
-                    </DataTemplate>
-                </ItemsControl.ItemTemplate>
-            </ItemsControl>
-        </WrapPanel>
-        <ComboBox Name="sauces">
-            <ComboBox.ItemTemplate>
+        
+        <ItemsControl Name="doughs">
+            <ItemsControl.ItemsPanel>
+                <ItemsPanelTemplate>
+                    <WrapPanel>
+
+                    </WrapPanel>
+                </ItemsPanelTemplate>
+            </ItemsControl.ItemsPanel>
+            
+            <ItemsControl.ItemTemplate>
                 <DataTemplate DataType="{x:Type local:Ingredient}">
-                    <Button Click="SelectSauces_Click" Margin="5" Grid.Column="3">
+                    <Button Click="SelectDoughs_Click" Margin="5" Grid.Column="3">
                         <TextBlock Text="{Binding IngredientName}"/>
                     </Button>
                 </DataTemplate>
-            </ComboBox.ItemTemplate>
-        </ComboBox>
-        <ComboBox Name="cheeses">
-            <ComboBox.ItemTemplate>
+            </ItemsControl.ItemTemplate>
+        </ItemsControl>
+
+        <ItemsControl Name="sauces">
+            <ItemsControl.ItemsPanel>
+                <ItemsPanelTemplate>
+                    <WrapPanel>
+
+                    </WrapPanel>
+                </ItemsPanelTemplate>
+            </ItemsControl.ItemsPanel>
+
+            <ItemsControl.ItemTemplate>
                 <DataTemplate DataType="{x:Type local:Ingredient}">
-                    <Button Click="SelectCheeses_Click" Margin="5" Grid.Column="3">
+                    <Button Click="SelectDoughs_Click" Margin="5" Grid.Column="3">
                         <TextBlock Text="{Binding IngredientName}"/>
                     </Button>
                 </DataTemplate>
-            </ComboBox.ItemTemplate>
-        </ComboBox>
-        <ComboBox Name="toppings">
-            <ComboBox.ItemTemplate>
+            </ItemsControl.ItemTemplate>
+        </ItemsControl>
+
+        <ItemsControl Name="toppings">
+            <ItemsControl.ItemsPanel>
+                <ItemsPanelTemplate>
+                    <WrapPanel>
+
+                    </WrapPanel>
+                </ItemsPanelTemplate>
+            </ItemsControl.ItemsPanel>
+
+            <ItemsControl.ItemTemplate>
                 <DataTemplate DataType="{x:Type local:Ingredient}">
-                    <Button Click="SelectToppings_Click" Margin="5" Grid.Column="3">
+                    <Button Click="SelectDoughs_Click" Margin="5" Grid.Column="3">
                         <TextBlock Text="{Binding IngredientName}"/>
                     </Button>
                 </DataTemplate>
-            </ComboBox.ItemTemplate>
-        </ComboBox>
-        <ComboBox Name="spices">
-            <ComboBox.ItemTemplate>
+            </ItemsControl.ItemTemplate>
+        </ItemsControl>
+
+        <ItemsControl Name="cheeses">
+            <ItemsControl.ItemsPanel>
+                <ItemsPanelTemplate>
+                    <WrapPanel>
+
+                    </WrapPanel>
+                </ItemsPanelTemplate>
+            </ItemsControl.ItemsPanel>
+
+            <ItemsControl.ItemTemplate>
                 <DataTemplate DataType="{x:Type local:Ingredient}">
-                    <Button Click="SelectSpices_Click" Margin="5" Grid.Column="3">
+                    <Button Click="SelectDoughs_Click" Margin="5" Grid.Column="3">
                         <TextBlock Text="{Binding IngredientName}"/>
                     </Button>
                 </DataTemplate>
-            </ComboBox.ItemTemplate>
-        </ComboBox>
+            </ItemsControl.ItemTemplate>
+        </ItemsControl>
+
+        <ItemsControl Name="spices">
+            <ItemsControl.ItemsPanel>
+                <ItemsPanelTemplate>
+                    <WrapPanel>
+
+                    </WrapPanel>
+                </ItemsPanelTemplate>
+            </ItemsControl.ItemsPanel>
+
+            <ItemsControl.ItemTemplate>
+                <DataTemplate DataType="{x:Type local:Ingredient}">
+                    <Button Click="SelectDoughs_Click" Margin="5" Grid.Column="3">
+                        <TextBlock Text="{Binding IngredientName}"/>
+                    </Button>
+                </DataTemplate>
+            </ItemsControl.ItemTemplate>
+        </ItemsControl>
+
     </StackPanel>
 </Window>
