--- a/Pizza2/MainWindow.xaml
+++ b/Pizza2/MainWindow.xaml
@@ -53,6 +53,11 @@
             <ScrollViewer Margin="3" VerticalAlignment="Top" Grid.Row="1">
                 <StackPanel>
                     <TextBlock Text="bread"/>
+                    <ComboBox x:Name="BreadDropdown" ItemsSource="{Binding}" SelectedItem="{Binding Path=Bread, Mode=TwoWay}">
+                    </ComboBox>
+                    
+                    
+                    
                     <ItemsControl x:Name="thepiz" ItemsSource="{Binding}">
                         <ItemsControl.ItemTemplate>
                             <DataTemplate DataType="{x:Type local:Pizza}">
