ok now it works

--- a/Pizza2/MainWindow.xaml
+++ b/Pizza2/MainWindow.xaml
@@ -55,7 +55,7 @@
                                     <Grid.RowDefinitions>
                                         <RowDefinition Height="25"/>
                                     </Grid.RowDefinitions>
-                                    <ComboBox ItemsSource="{Binding DrinksListCopy}" DisplayMemberPath="Name" SelectedItem="{Binding Path=Name, Mode=TwoWay}"/>
+                                    <ComboBox SelectedIndex="0" ItemsSource="{Binding DrinksListCopy}" DisplayMemberPath="Name" SelectedItem="{Binding Path=Name, Mode=TwoWay}"/>
 
                                     <RadioButton BindingGroup="{Binding DrinkSize}" Grid.Column="1" IsChecked="True">small</RadioButton>
                                     <RadioButton BindingGroup="{Binding DrinkSize}" Grid.Column="2">medium</RadioButton>
