--- a/Pizza2/MainWindow.xaml
+++ b/Pizza2/MainWindow.xaml
@@ -83,15 +83,16 @@
             <TextBlock Grid.Row="0" Text="ooga booga editing pizza"  Margin="1" TextAlignment="Center"/>
             <ScrollViewer Margin="3" VerticalAlignment="Top" Grid.Row="1">
                 <StackPanel>
+                    <TextBlock x:Name="PizzaPrize" Text="{Binding Path=PizzaPrize, Mode=TwoWay, NotifyOnSourceUpdated=True}"/>
                     <CheckBox  x:Name="LargeCheck" Content="large"/>
                     <TextBlock Text="bread"/>
-                    <ComboBox x:Name="BreadDropdown" ItemsSource="{Binding}" DisplayMemberPath="Name" SelectedItem="{Binding Path=Bread, Mode=TwoWay}">
+                    <ComboBox x:Name="BreadDropdown" ItemsSource="{Binding}" DisplayMemberPath="Name" SelectionChanged="BreadDropdown_SelectionChanged" SelectedItem="{Binding Path=Bread, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}">
                     </ComboBox>
                     <TextBlock Text="cheese"/>
-                    <ComboBox x:Name="CheeseDropdown" ItemsSource="{Binding}" DisplayMemberPath="Name" SelectedItem="{Binding Path=Cheese, Mode=TwoWay}">
+                    <ComboBox x:Name="CheeseDropdown" ItemsSource="{Binding}" DisplayMemberPath="Name" SelectionChanged="CheeseDropdown_SelectionChanged"  SelectedItem="{Binding Path=Cheese, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}">
                     </ComboBox>
                     <TextBlock Text="Sauce"/>
-                    <ComboBox x:Name="SauceDropdown" ItemsSource="{Binding}" DisplayMemberPath="Name" SelectedItem="{Binding Path=Sauce, Mode=TwoWay}">
+                    <ComboBox x:Name="SauceDropdown" ItemsSource="{Binding}" DisplayMemberPath="Name" SelectionChanged="SauceDropdown_SelectionChanged" SelectedItem="{Binding Path=Sauce, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}">
                     </ComboBox>
                     <TextBlock Text="toppings"/>
 
